load("//testing:file_equals_test.bzl", "file_equals_test")
load("//:concat_files.bzl", "concat_files")

concat_files(
    name = "bazel_slogan",
    files = [
        # Disable formatting, since we don't want to sort the files
        # buildifier: leave-alone
        "//files:fast.txt",
        "//files:correct.txt",
        "//files:choose.txt",
    ],
    ouput_file = "bazel_slogan.txt",
)

file_equals_test(
    name = "bazel_slogan_test",
    expected_content = "{Fast, Correct} - Choose two",
    file = "bazel_slogan",
)
